--- a/BasicHistoryApi/app/src/main/res/values/strings.xml
+++ b/BasicHistoryApi/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2014 Google, Inc.
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -20,6 +19,6 @@
     <string name="intro_text">Behold, a data dump from the Fitness API! Check the menu for more actions!</string>
     <string name="action_update_session">Update step count data</string>
     <string name="action_delete_session">Delete step count data</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_signout">Sign out</string>
 
 </resources>
