--- a/BasicRecordingApiKotlin/app/src/main/res/values/strings.xml
+++ b/BasicRecordingApiKotlin/app/src/main/res/values/strings.xml
@@ -20,6 +20,10 @@ limitations under the License.
     <string name="intro_text">Hi! Let\'s subscribe to some available data sources! Use the menu to explore additional actions!</string>
     <string name="action_dump_subs">List Active Subscriptions</string>
     <string name="action_cancel_subs">Cancel subscriptions</string>
-    <string name="action_settings">Settings</string>
-
+    <string name="action_create_subs">Create subscriptions</string>
+    <string name="settings">Settings</string>
+    <string name="ok">OK</string>
+    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
+    <string name="permission_denied_explanation">Permission was denied, but is needed for core
+        functionality.</string>
 </resources>
