--- a/SleepKotlin/app/src/main/res/values/strings.xml
+++ b/SleepKotlin/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-Copyright 2014 Google, Inc.
+Copyright 2020 Google, Inc.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -18,8 +18,7 @@ limitations under the License.
     <string name="app_name">Sleep sample</string>
     <string name="intro_text">Hi! Writing sleep data to the Fit API! Use the menu to read it back, aggregated in different ways.</string>
     <string name="permission_rationale">Activity recognition is used as part of the Google Fit API</string>
-    <string name="permission_denied_explanation">Permission was denied, but is needed for core
-        functionality.</string>
+    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
     <string name="settings">Settings</string>
     <string name="ok">OK</string>
     <string name="action_aggregated_by_week">Read aggregated over week</string>
